force-app/main/default/objects/Project__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Submitted to Ensite</fullName>
            </value>
            <value>
                <fullName>EnSite Approved</fullName>
            </value>
            <value>
                <fullName>CES Approved</fullName>
            </value>
            <value>
                <fullName>Submitted for CES Approval</fullName>
                <default>true</default>
                <label>Submitted for CES Approval</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>