force-app/main/default/objects/Project__c/fields/Area_of_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Area_of_Responsibility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Why are you doing this project?  Does is relate to an area you&#39;re responsible for?</description>
    <inlineHelpText>Why are you doing this project?  Does is relate to an area you&#39;re responsible for?</inlineHelpText>
    <label>Area of Responsibility</label>
    <referenceTo>Area_of_Responsibility__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>