force-app/main/default/objects/Project__c/fields/Assigned_to_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>