force-app/main/default/objects/Project__c/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <description>date project was completed</description>
    <inlineHelpText>date project was completed</inlineHelpText>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>