force-app/main/default/objects/Project__c/fields/Core_Project_or_Goal__c.field-meta.xml
<CustomField>
    <fullName>Core_Project_or_Goal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>is this a core project or goal?</description>
    <label>Core Project or Goal</label>
    <type>Checkbox</type>
</CustomField>