force-app/main/default/objects/Project__c/fields/Email_Alert_Header_Text__c.field-meta.xml
<CustomField>
    <fullName>Email_Alert_Header_Text__c</fullName>
    <formula>CASE(TEXT(Status__c), 
  &quot;Assigned&quot;, &quot;A new technology project has been assigned to you.&quot; &amp; BR() &amp; &quot;Please begin work on this project and document project status changes in Salesforce.&quot;, 
  &quot;Completed&quot;, &quot;A technology project has been completed.&quot; &amp; BR() &amp; &quot;The associated case #&quot; &amp; Technology_Case__r.Name &amp; &quot; has been closed.&quot;,
  &quot;&quot;)</formula>
    <label>Email Alert Header Text</label>
    <type>Text</type>
</CustomField>