force-app/main/default/objects/Project__c/fields/Expected_Date_of_Completion__c.field-meta.xml
<CustomField>
    <fullName>Expected_Date_of_Completion__c</fullName>
    <label>Expected Date of Completion</label>
    <type>Date</type>
</CustomField>