force-app/main/default/objects/Project__c/fields/Fix_Mod__c.field-meta.xml
<CustomField>
    <fullName>Fix_Mod__c</fullName>
    <defaultValue>false</defaultValue>
    <description>is this a fix or modification?</description>
    <label>Fix - Mod</label>
    <type>Checkbox</type>
</CustomField>