force-app/main/default/objects/Project__c/fields/Install_Date__c.field-meta.xml
<CustomField>
    <fullName>Install_Date__c</fullName>
    <description>date project will be installed on production (i.e. safari IT)</description>
    <inlineHelpText>date project will be installed on production (i.e. safari IT)</inlineHelpText>
    <label>IT Install Date</label>
    <type>Date</type>
</CustomField>