force-app/main/default/objects/Project__c/fields/IT_Ticket__c.field-meta.xml
<CustomField>
    <fullName>IT_Ticket__c</fullName>
    <label>IT Ticket</label>
    <length>30</length>
    <type>Text</type>
</CustomField>