force-app/main/default/objects/Project__c/fields/Priority_Formula__c.field-meta.xml
<CustomField>
    <fullName>Priority_Formula__c</fullName>
    <formula>IF ( Core_Project_or_Goal__c == true
  , 1
  , IF ( Fix_Mod__c == true
      , 3
      , 2
    )
)</formula>
    <label>Priority Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>