force-app/main/default/objects/Project__c/fields/Project_Environment__c.field-meta.xml
<CustomField>
    <fullName>Project_Environment__c</fullName>
    <label>Project Environment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Safari</fullName>
            </value>
            <value>
                <fullName>Informatica</fullName>
            </value>
            <value>
                <fullName>Gemini</fullName>
            </value>
            <value>
                <fullName>CMS/CCOM</fullName>
            </value>
            <value>
                <fullName>Various</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>