force-app/main/default/objects/Project__c/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bug/Fix</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Endur - Phase 1</fullName>
            </value>
            <value>
                <fullName>Enhancement</fullName>
            </value>
            <value>
                <fullName>Issue</fullName>
            </value>
            <value>
                <fullName>Lightning Readiness</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Milestone</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>Release</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>SOW</fullName>
            </value>
            <value>
                <fullName>TrueCost</fullName>
            </value>
            <value>
                <fullName>User Administration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>