force-app/main/default/objects/Project__c/fields/Related_To__c.field-meta.xml
<CustomField>
    <fullName>Related_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related To</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Projects (Related To)</relationshipLabel>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>