force-app/main/default/objects/Project__c/fields/Related_to_Area__c.field-meta.xml
<CustomField>
    <fullName>Related_to_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related to Area</label>
    <referenceTo>Area_of_Responsibility__c</referenceTo>
    <relationshipLabel>Projects (Related to Area)</relationshipLabel>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>