force-app/main/default/objects/Project__c/fields/Release_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Release_Assignment__c</fullName>
    <formula>IF(Area_of_Responsibility__r.Name == &#39;Safari SOW&#39; || Area_of_Responsibility__r.Name == &#39;Safari Issue&#39;
  , IF(ISBLANK(Parent_Project__c)
      , IF(ISPICKVAL(Status__c, &#39;Suspended&#39;) 
          , &#39;On Hold&#39;
          , TEXT(Status__c) 
        )
      , Parent_Project__r.Name
    )
  , null
)</formula>
    <label>Release Assignment</label>
    <type>Text</type>
</CustomField>