force-app/main/default/objects/Project__c/fields/Report_Install_Date__c.field-meta.xml
<CustomField>
    <fullName>Report_Install_Date__c</fullName>
    <label>Report Install Date</label>
    <type>Date</type>
</CustomField>