force-app/main/default/objects/Project__c/fields/Report_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Report_Ticket__c</fullName>
    <label>Report Ticket</label>
    <length>30</length>
    <type>Text</type>
</CustomField>