force-app/main/default/objects/Project__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <description>Who requested this project or is the contact for project related information?</description>
    <inlineHelpText>Who requested this project or is the contact for project related information?</inlineHelpText>
    <label>Requested By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>