force-app/main/default/objects/Project__c/fields/Review_Notes__c.field-meta.xml
<CustomField>
    <fullName>Review_Notes__c</fullName>
    <label>Review Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>