force-app/main/default/objects/Project__c/fields/Technology_Case__c.field-meta.xml
<CustomField>
    <fullName>Technology_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technology Case</label>
    <referenceTo>TrueCost_Case__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>