force-app/main/default/objects/Project__c/fields/Work_Around__c.field-meta.xml
<CustomField>
    <fullName>Work_Around__c</fullName>
    <label>Work Around</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>