force-app/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Overview__c</columns>
    <columns>Status__c</columns>
    <columns>Expected_Date_of_Completion__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Completion_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>