force-app/main/default/objects/Project__c/listViews/Continuous_Improvement.listView-meta.xml
<ListView>
    <fullName>Continuous_Improvement</fullName>
    <columns>NAME</columns>
    <columns>Overview__c</columns>
    <columns>Status__c</columns>
    <columns>Expected_Date_of_Completion__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Area_of_Responsibility__c</field>
        <operation>equals</operation>
        <value>Continuous Improvement</value>
    </filters>
    <label>Continuous Improvement</label>
    <language>en_US</language>
</ListView>