force-app/main/default/objects/Project__c/listViews/Primary_projects_not_complete.listView-meta.xml
<ListView>
    <fullName>Primary_projects_not_complete</fullName>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Project_Environment__c</columns>
    <columns>Project_Type__c</columns>
    <columns>NAME</columns>
    <columns>Overview__c</columns>
    <columns>Requested_By__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Cancelled</value>
    </filters>
    <filters>
        <field>Core_Project_or_Goal__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Primary projects not complete</label>
    <language>en_US</language>
</ListView>