force-app/main/default/objects/Project__c/listViews/Projects_not_complete_low.listView-meta.xml
<ListView>
    <fullName>Projects_not_complete_low</fullName>
    <columns>Project_Environment__c</columns>
    <columns>Project_Type__c</columns>
    <columns>NAME</columns>
    <columns>Overview__c</columns>
    <columns>Requested_By__c</columns>
    <columns>Assigned_to_User__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Cancelled</value>
    </filters>
    <filters>
        <field>Project_Type__c</field>
        <operation>notEqual</operation>
        <value>Issue,SOW,Maintenance</value>
    </filters>
    <filters>
        <field>Priority__c</field>
        <operation>equals</operation>
        <value>Low</value>
    </filters>
    <label>Projects not complete low</label>
    <language>en_US</language>
</ListView>