force-app/main/default/objects/Project__c/listViews/Safari_Issues.listView-meta.xml
<ListView>
    <fullName>Safari_Issues</fullName>
    <columns>NAME</columns>
    <columns>Overview__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_Environment__c</field>
        <operation>equals</operation>
        <value>Safari</value>
    </filters>
    <filters>
        <field>Project_Type__c</field>
        <operation>equals</operation>
        <value>Issue</value>
    </filters>
    <label>Safari Issues</label>
    <language>en_US</language>
    <sharedTo>
        <group>Administrators_System</group>
    </sharedTo>
</ListView>